# sqlx-oracle

./: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  opencode.yml
sqlx-oracle/: Cargo.toml  build.rs
sqlx-oracle-unit/: Cargo.toml
sqlx-oracle-unit/src/: lib.rs  main.rs
sqlx-oracle-unit/tests/: integration.rs
sqlx-oracle/src/: arguments.rs  column.rs  connection.rs  database.rs  encode_decode.rs  error.rs  lib.rs  options.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
