[workspace]
members = ["sqlx-oracle", "sqlx-oracle-unit"]
resolver = "3"

[workspace.dependencies]
sqlx = "0.8.6"
sqlx-core = "0.8.6"
dotenvy = "0.15.7"
# Oracle OCI 绑定，使用非阻塞 + tokio 模式
sibyl = { version = "0.7.0", features = ["nonblocking", "tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
once_cell = "1.21.4"
parking_lot = "0.12.5"
url = "2.5.8"
urlencoding = "2.1.3"
log = "0.4.29"
tracing = "^0.1"
chrono = "0.4.44"
