[package]
name = "sqlx-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]

sqlx = { workspace = true }
sqlx-core = { workspace = true }
dotenvy = { workspace = true }
sibyl = { workspace = true }
tokio = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }

[lib]
name = "sqlx_oracle"
