[package]
name = "sqlx-oracle"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Oracle database driver for sqlx, based on the sibyl OCI binding"

[dependencies]

sqlx = { workspace = true }
sqlx-core = { workspace = true }
dotenvy = { workspace = true }
# Oracle OCI 客户端绑定
sibyl = { workspace = true }
tokio = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, optional = true }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[lib]
name = "sqlx_oracle"
